# Cditor

./: .env.example  .gitignore  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  check_status.sh  run_minimal_editor.sh
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs  mock.rs  openai.rs  provider.rs
crates/app/: Cargo.toml
crates/app/src/: lib.rs  main.rs
crates/app/src/api/: builder.rs  cditor.rs  cold_start.rs  command.rs  component.rs  diagnostics.rs  document.rs  document_rendering.rs  error.rs  event.rs  handle.rs  import_export.rs  mod.rs  options.rs  providers.rs  syntax_highlighting.rs
crates/app/src/gui/: clipboard_assets.rs  image_loader.rs  image_preview.rs  menu_metrics.rs  mod.rs  platform.rs  rich_text.rs  theme.rs
crates/app/src/gui/app/: cditor_v2_view.rs  cditor_v2_view_interaction_tests.rs  cditor_v2_view_tests.rs  input_trace.rs  integration_bridge.rs  lifecycle.rs  mod.rs  payload_cache.rs  persistence_bridge.rs  persistence_bridge_stub.rs  render.rs  sdk.rs  state.rs  text_hit.rs
crates/app/src/gui/block/: block_content.rs  block_shell.rs  block_view.rs  chrome.rs  code.rs  code_toolbar.rs  drag_overlay.rs  gutter.rs  heading.rs  html.rs  list.rs  media.rs  mod.rs  paragraph.rs  placeholder.rs  prefix.rs  quote.rs  skeleton.rs
crates/app/src/gui/diagnostics/: block_color.rs  mod.rs
crates/app/src/gui/document/: debug_header.rs  document_editor_view.rs  document_surface.rs  layout_metrics.rs  mod.rs  skeleton_window.rs
crates/app/src/gui/input/: actions.rs  ai_prompt.rs  clipboard.rs  code_language.rs  command.rs  ime.rs  keyboard.rs  mod.rs  mouse.rs  platform_adapter.rs  single_line.rs
crates/app/src/gui/overlay/: ai_inline.rs  block_transform_menu.rs  caret_overlay.rs  color_menu.rs  command_menu.rs  floating_toolbar.rs  floating_toolbar_tests.rs  mod.rs  selection_overlay.rs  slash_menu.rs  toast.rs  whiteboard_editor.rs
crates/app/src/gui/persistence/: close_guard.rs  mod.rs  payload_loader.rs  postgres_saver.rs  postgres_saver_stub.rs  save_indicator.rs  storage_saver.rs
crates/app/src/gui/scroll/: mod.rs
crates/app/src/gui/skeleton/: mod.rs  primitives.rs
crates/app/src/gui/text/: background.rs  element.rs  element_tests.rs  fallback_render.rs  input.rs  layout.rs  mod.rs  platform.rs
crates/app/src/integration/: builder.rs  document.rs  error.rs  events.rs  handle.rs  markdown.rs  markdown_bundle.rs  mod.rs  persistence.rs  source_editor.rs
crates/app/tests/: component_sdk.rs
crates/ding-board/: Cargo.toml  README.md
crates/ding-board/examples/: minimal_board.rs
crates/ding-board/src/: lib.rs  svg_export.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/engine/src/acceptance/: editing.rs  scroll.rs  table.rs
crates/engine/src/content/: media_cache.rs  mod.rs  payload_window.rs  security.rs
crates/engine/src/document_runtime/: composition.rs  constructors.rs  focus.rs  markdown_paste.rs  media.rs  mod.rs  payload_window.rs  projection.rs  scroll.rs  selection.rs  state.rs  store_loading.rs  structure_delete.rs  structure_edit.rs  structure_move.rs  structure_transactions.rs  tests.rs  text_edit.rs  text_payload.rs  undo_redo.rs
crates/engine/src/document_runtime/table/: clipboard.rs  edit.rs  input.rs  layout.rs  mod.rs  navigation.rs  projection.rs  reorder.rs  resize.rs  runtime.rs  transaction.rs
crates/engine/src/editing/: composition.rs  session.rs
crates/engine/src/projection/: mod.rs  view.rs
crates/engine/src/scheduling/: async_version_control.rs
crates/gpui/: Cargo.toml
crates/gpui/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/runtime/src/acceptance/: mod.rs  open.rs  structure_edit.rs  table.rs
crates/runtime/src/content/: mod.rs  paste_import.rs  payload_cache.rs  payload_window.rs  query_index.rs
crates/runtime/src/document_runtime/: ai.rs  block_attrs.rs  capabilities.rs  clipboard.rs  cold_start.rs  composition.rs  constructors.rs  focus.rs  folding.rs  inline_color.rs  inline_format.rs  layout_heights.rs  markdown_paste.rs  mod.rs  payload_cache.rs  payload_hydration.rs  payload_window.rs  projection.rs  queries.rs  scroll.rs  selection.rs  state.rs  structure_delete.rs  structure_edit.rs  structure_index.rs  structure_payload.rs  tests.rs  text_edit.rs  text_navigation.rs  text_payload.rs  text_target.rs  undo_redo.rs  whiteboard.rs
crates/runtime/src/document_runtime/table/: clipboard.rs  edit.rs  input.rs  layout.rs  mod.rs  navigation.rs  projection.rs  runtime.rs  scroll.rs  selection.rs  transaction.rs
crates/runtime/src/document_runtime/tests/: ai.rs  capabilities.rs  clipboard.rs  complex_block_input.rs  composition_input.rs  conversion_clipboard_media.rs  delete_navigation_height.rs  inline_color.rs  inline_markdown_incremental.rs  large_window.rs  list_structure.rs  markdown.rs  multi_block_delete.rs  payload_window_store.rs  rich_text_edit.rs  runtime_shortcuts.rs  selection_scroll.rs  table_clipboard_resize.rs  (+5 more)
crates/runtime/src/editing/: hot_path.rs  mod.rs  session.rs
crates/runtime/src/projection/: list.rs  view.rs
crates/runtime/src/scheduling/: layout_scheduler.rs  main_thread_budget.rs  mod.rs  worker_pool_policy.rs
crates/store-postgres/: Cargo.toml
crates/store-postgres/migrations/: 0001_initial.sql
crates/store-postgres/src/: adapter.rs  demo_seed.rs  error.rs  lib.rs  migrations.rs  pool.rs  postgres_integration.rs  runtime.rs
crates/store-postgres/src/queue/: persistence.rs
crates/store-postgres/src/stores/: asset.rs  crash_recovery.rs  document.rs  document_tests.rs  fts.rs  layout.rs  layout_tests.rs  mod.rs  payload.rs  sync_outbox.rs  transaction.rs
crates/store-postgres/src/types/: attrs.rs  block_kind.rs  ids.rs  mod.rs  payload.rs  rows.rs  transactions.rs
crates/store-sqlite/: Cargo.toml
crates/store-sqlite/migrations/: 0001_initial.sql  0002_page_layout_snapshot.sql
crates/store-sqlite/src/: codec.rs  config.rs  error.rs  ids.rs  layout.rs  lib.rs  page_layout.rs  payload.rs  snapshot.rs  storage.rs  util.rs  writer.rs
crates/store-sqlite/tests/: storage_contract.rs
(+266 files in other folders)
