[workspace]
members = [
    "crates/ai",
    "crates/app",
    "crates/core",
    "crates/ding-board",
    "crates/editor",
    "crates/runtime",
    "crates/store",
    "crates/store-postgres",
]
default-members = ["crates/app"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
