[workspace]
members = [
    "crates/ai",
    "crates/app",
    "crates/core",
    "crates/ding-board",
    "crates/editor",
    "crates/runtime",
    "crates/store",
    "crates/store-postgres",
    "crates/store-sqlite",
]
default-members = ["crates/app"]
resolver = "3"

[workspace.package]
version = "0.2.6"
edition = "2024"
license = "GPL-3.0-or-later"

# Distribution builds favor runtime performance over CI compile time. Fat LTO
# and a single codegen unit let LLVM optimize across the complete crate graph.
[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
