[package]
name = "cditor-ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-channel = "2"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
