[package]
name = "cditor-ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["openai"]
openai = ["dep:dotenvy", "dep:reqwest", "dep:toml"]

[dependencies]
async-channel = "2"
dotenvy = { version = "0.15", optional = true }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", optional = true }
