[package]
name = "cditor-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "cditor_app"

[[bin]]
name = "cditor-app"
path = "src/main.rs"
required-features = ["application"]

[features]
default = ["ai-openai", "application", "postgres", "remote-media"]
ai-openai = ["cditor-ai/openai"]
application = ["dep:gpui_platform"]
postgres = [
    "dep:cditor-storage-postgres",
    "dep:sqlx",
    "dep:tokio",
]
remote-media = ["dep:reqwest"]
runtime-shaders = ["application", "gpui_platform/runtime_shaders"]

[dependencies]
cditor-ai = { path = "../ai", default-features = false }
cditor-core = { path = "../core" }
ding-board = { path = "../ding-board" }
cditor-editor = { path = "../editor" }
cditor-runtime = { path = "../runtime", default-features = false }
cditor-storage = { path = "../store" }
cditor-storage-postgres = { path = "../store-postgres", optional = true }
gpui = { git = "https://github.com/zed-industries/zed", rev = "76c93968da5b8b8809bdd72e4ad9e7d0e946bad0", default-features = false, features = ["font-kit"] }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "76c93968da5b8b8809bdd72e4ad9e7d0e946bad0", optional = true, default-features = false, features = ["font-kit"] }
mermaid_render = { git = "https://github.com/zed-industries/zed", rev = "76c93968da5b8b8809bdd72e4ad9e7d0e946bad0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", optional = true, default-features = false, features = ["runtime-tokio", "postgres", "uuid"] }
tokio = { version = "1", optional = true, features = ["time"] }
unicode-segmentation = "1.12"
image = "0.25.10"
reqwest = { version = "0.12", optional = true, default-features = false, features = ["blocking", "rustls-tls"] }
lumis = { version = "0.12.0", default-features = false, features = [
    "lang-bash",
    "lang-c",
    "lang-cpp",
    "lang-csharp",
    "lang-css",
    "lang-diff",
    "lang-dockerfile",
    "lang-go",
    "lang-html",
    "lang-java",
    "lang-javascript",
    "lang-json",
    "lang-kotlin",
    "lang-markdown",
    "lang-python",
    "lang-rust",
    "lang-scss",
    "lang-sql",
    "lang-swift",
    "lang-toml",
    "lang-tsx",
    "lang-typescript",
    "lang-yaml",
    "lang-zsh",
] }

[dev-dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "76c93968da5b8b8809bdd72e4ad9e7d0e946bad0", default-features = false, features = ["font-kit", "test-support"] }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "76c93968da5b8b8809bdd72e4ad9e7d0e946bad0", default-features = false, features = ["runtime_shaders"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
