[package]
name = "cditor-runtime"
version = "0.1.0"
edition.workspace = true

[dependencies]
cditor-core = { path = "../core" }
cditor-editor = { path = "../editor" }
cditor-storage = { path = "../store" }
cditor-storage-postgres = { path = "../store-postgres" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[dev-dependencies]
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "uuid"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
