[package]
name = "cditor-gpui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Embeddable GPUI rich-text editor component for Cditor"

[features]
default = []
ai-openai = ["cditor-app/ai-openai"]
remote-media = ["cditor-app/remote-media"]

[dependencies]
cditor-app = { path = "../app", default-features = false }
